# azure-rag-embedding

./: .cursorrules  .cursorrules.backup  .gitignore  DEBUG_REPORT.md  GITHUB_SETUP.md  PUSH_COMMANDS.sh  PUSH_INSTRUCTIONS.md  README.md  config.py  embedding.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_config.py  test_embedding_client.py
