[project]
name = "azure-rag-embedding"
version = "0.1.0"
description = "Azure OpenAI Embedding Client for RAG with Azure AI Search"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "UP006",
    "UP035",
    "UP045",
    "UP011",
    "I001",
    "F401",
    "F541",
    "B905",
    "B007",
]

[tool.ruff.lint.isort]
known-first-party = ["config", "embedding"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["embedding", "config"]
disable_error_code = ["no-any-return", "attr-defined", "call-arg", "arg-type", "union-attr", "assignment"]
